Fixed .media__time color contrast

--- a/_sass/layout/_media.scss
+++ b/_sass/layout/_media.scss
@@ -69,7 +69,7 @@
     }
 
     &__time {
-        color: var(--color-base-light);
+        color: var(--color-base-lightest);
         padding-bottom: var(--space-xs);
 
         @include opentype-all-opentype-small-caps();
